--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
+    <audio id="music-player" src="" hidden></audio>
     <div class="seto"></div>
     <div class="wrapper">
       <div class="navbar">
@@ -42,23 +43,23 @@
       </div>
       <div class="content-wrapper">
         <div class="content">
-          <img class="song-img" src="./assets/arun-n.jpg" alt="#" />
-          <p class="song-title">aaogey tum kabhi</p>
+          <img class="song-img" src="./assets/manwa-lage-pic.jpg" alt="#" />
+          <p class="song-title">Manwa Lage</p>
           <i class="fa-solid fa-ellipsis-vertical"></i>
         </div>
         <div class="content">
-          <img class="song-img" src="./assets/arun-n.jpg" alt="#" />
-          <p class="song-title">aaogey tum kabhi</p>
+          <img class="song-img" src="./assets/mero-solta-pic.jpg" alt="#" />
+          <p class="song-title">Mero Solta</p>
           <i class="fa-solid fa-ellipsis-vertical"></i>
         </div>
         <div class="content">
-          <img class="song-img" src="./assets/arun-n.jpg" alt="#" />
-          <p class="song-title">aaogey tum kabhi</p>
+          <img class="song-img" src="./assets/type-shit-pic.jpg" alt="#" />
+          <p class="song-title">Travis Scoot type-shit</p>
           <i class="fa-solid fa-ellipsis-vertical"></i>
         </div>
         <div class="content">
-          <img class="song-img" src="./assets/arun-n.jpg" alt="#" />
-          <p class="song-title">aaogey tum kabhi</p>
+          <img class="song-img" src="./assets/chiya-boot-pic.jpg" alt="#" />
+          <p class="song-title">Chiya ko Bootama</p>
           <i class="fa-solid fa-ellipsis-vertical"></i>
         </div>
       </div>
@@ -68,15 +69,19 @@
         <div class="favorite-song-wrapper">
           <div class="favourite-song-list">
             <div class="song-banner">
-              <img class="favourite-img" src="./assets/ashish.jpg" alt="" />
-              <p class="favourite-title">manwa lage</p>
+              <img class="favourite-img" src="./assets/ncs-sound.jpg" alt="" />
+              <p class="favourite-title">Fearless</p>
               <p class="song-artist">Played .Shreya Ghosal</p>
             </div>
           </div>
           <div class="favourite-song-list">
             <div class="song-banner">
-              <img class="favourite-img" src="./assets/ashish.jpg" alt="" />
-              <p class="favourite-title">Mantramughda</p>
+              <img
+                class="favourite-img"
+                src="./assets/tu-hai-kaha-pic.jpg"
+                alt=""
+              />
+              <p class="favourite-title">Tu hai kaha</p>
               <p class="song-artist">Played .Shreya Ghosal</p>
             </div>
           </div>
@@ -132,5 +137,7 @@
         </div>
       </div>
     </div>
+
+    <script src="./script.js"></script>
   </body>
 </html>
