--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <audio id="music-player" src="" hidden></audio>
+    <audio class="music-player" id="music-player" src="" controls></audio>
     <div class="seto"></div>
     <div class="wrapper">
       <div class="navbar">
@@ -71,7 +71,7 @@
             <div class="song-banner">
               <img class="favourite-img" src="./assets/ncs-sound.jpg" alt="" />
               <p class="favourite-title">Fearless</p>
-              <p class="song-artist">Played .Shreya Ghosal</p>
+              <p class="song-artist">Played .Chris Linton</p>
             </div>
           </div>
           <div class="favourite-song-list">
@@ -82,21 +82,29 @@
                 alt=""
               />
               <p class="favourite-title">Tu hai kaha</p>
-              <p class="song-artist">Played .Shreya Ghosal</p>
+              <p class="song-artist">Played . Raffey - Usama - Ahad</p>
             </div>
           </div>
           <div class="favourite-song-list">
             <div class="song-banner">
-              <img class="favourite-img" src="./assets/ashish.jpg" alt="" />
-              <p class="favourite-title">manwa lage</p>
-              <p class="song-artist">Played .Shreya Ghosal</p>
+              <img
+                class="favourite-img"
+                src="./assets/dusman-herekoherai-pic.jpg"
+                alt=""
+              />
+              <p class="favourite-title">Dusman Hereko Herai</p>
+              <p class="song-artist">Played .Durgesh Thapa</p>
             </div>
           </div>
           <div class="favourite-song-list">
             <div class="song-banner">
-              <img class="favourite-img" src="./assets/ashish.jpg" alt="" />
-              <p class="favourite-title">manwa lage</p>
-              <p class="song-artist">Played .Shreya Ghosal</p>
+              <img
+                class="favourite-img"
+                src="./assets/kera-ke-thampo-pic.jpg"
+                alt=""
+              />
+              <p class="favourite-title">Kera ke thampo</p>
+              <p class="song-artist">Played .Awadhesh Premi Yadav</p>
             </div>
           </div>
           <div class="favourite-song-list">
