--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
           <p class="music">Music</p>
         </div>
         <div class="rignt-navbar">
-          <i class="fa-solid fa-bell"></i>
-          <i class="fa-solid fa-magnifying-glass"></i>
+          <i class="fa-solid fa-bell icon"></i>
+          <i class="fa-solid fa-magnifying-glass icon"></i>
           <img class="gmail-logo" src="./assets/ashish.jpg" alt="#" />
         </div>
       </div>
@@ -65,7 +65,6 @@
       </div>
       <div class="favourite">
         <p class="Forgotten-favourite">Forgotten fovourites</p>
-
         <div class="favorite-song-wrapper">
           <div class="favourite-song-list">
             <div class="song-banner">
@@ -78,13 +77,14 @@
             <div class="song-banner">
               <img
                 class="favourite-img"
-                src="./assets/tu-hai-kaha-pic.jpg"
+                src="./assets/tu-hai-kaha.jpg"
                 alt=""
               />
-              <p class="favourite-title">Tu hai kaha</p>
-              <p class="song-artist">Played . Raffey - Usama - Ahad</p>
+              <p class="favourite-title">Tu hain kaha</p>
+              <p class="song-artist">Played .Raffey-Usama-Ahad</p>
             </div>
           </div>
+
           <div class="favourite-song-list">
             <div class="song-banner">
               <img
@@ -109,9 +109,13 @@
           </div>
           <div class="favourite-song-list">
             <div class="song-banner">
-              <img class="favourite-img" src="./assets/ashish.jpg" alt="" />
-              <p class="favourite-title">manwa lage</p>
-              <p class="song-artist">Played .Shreya Ghosal</p>
+              <img
+                class="favourite-img"
+                src="./assets/ap-dillon-pic.jpg"
+                alt=""
+              />
+              <p class="favourite-title">With You</p>
+              <p class="song-artist">Played .AP Dhillon</p>
             </div>
           </div>
           <div class="favourite-song-list">
@@ -144,8 +148,44 @@
           </div>
         </div>
       </div>
+      <div class="logo-name">
+        <img class="gmail-pic" src="./assets/ashish.jpg" alt="ashish" />
+        <div class="gmail-speed">
+          <p class="rebirth-ff">REBIRTH FF</p>
+          <p class="Speed-dial">Speed dial</p>
+        </div>
+      </div>
+      <div class="song-container">
+        <div class="first-row">
+          <div class="image-and-title">
+            <img class="songs-images" src="./assets/central-cee-pic.jpg" alt="" />
+            <p class="songs-titles">Obsessed</p>
+          </div>
+          <div class="image-and-title">
+            <img class="songs-images" src="./assets/juice-world-pic.jpg" alt="" />
+            <p class="songs-titles">Juice world</p>
+          </div>
+          <div class="image-and-title">
+            <img class="songs-images" src="./assets/hope-pic.jpg" alt="" />
+            <p class="songs-titles">Hope</p>
+          </div>
+        </div>
+        <div class="second-row">
+          <div class="image-and-title">
+            <img class="songs-images" src="./assets/departure-lane-pic.jpg" alt="" />
+            <p class="songs-titles">Departure lane</p>
+          </div>
+          <div class="image-and-title">
+            <img class="songs-images" src="./assets/central-cee-pic.jpg" alt="" />
+            <p class="songs-titles">Obsessed </p>
+          </div>
+          <div class="image-and-title">
+            <img class="songs-images" src="./assets/central-cee-pic.jpg" alt="" />
+            <p class="songs-titles">Obsessed</p>
+          </div>
+        </div>
+      </div>
     </div>
-
     <script src="./script.js"></script>
   </body>
 </html>
