--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>youtube music official</title>
     <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
@@ -20,7 +25,7 @@
           <p class="music">Music</p>
         </div>
         <div class="rignt-navbar">
-          <i class="fa-solid fa-bell icon"></i>
+          <box-icon name="bell" color="#ffffff"></box-icon>
           <i class="fa-solid fa-magnifying-glass icon"></i>
           <img class="gmail-logo" src="./assets/ashish.jpg" alt="#" />
         </div>
@@ -118,34 +123,6 @@
               <p class="song-artist">Played .AP Dhillon</p>
             </div>
           </div>
-          <div class="favourite-song-list">
-            <div class="song-banner">
-              <img class="favourite-img" src="./assets/ashish.jpg" alt="" />
-              <p class="favourite-title">manwa lage</p>
-              <p class="song-artist">Played .Shreya Ghosal</p>
-            </div>
-          </div>
-          <div class="favourite-song-list">
-            <div class="song-banner">
-              <img class="favourite-img" src="./assets/ashish.jpg" alt="" />
-              <p class="favourite-title">manwa lage</p>
-              <p class="song-artist">Played .Shreya Ghosal</p>
-            </div>
-          </div>
-          <div class="favourite-song-list">
-            <div class="song-banner">
-              <img class="favourite-img" src="./assets/ashish.jpg" alt="" />
-              <p class="favourite-title">manwa lage</p>
-              <p class="song-artist">Played .Shreya Ghosal</p>
-            </div>
-          </div>
-          <div class="favourite-song-list">
-            <div class="song-banner">
-              <img class="favourite-img" src="./assets/ashish.jpg" alt="" />
-              <p class="favourite-title">manwa lage</p>
-              <p class="song-artist">Played .Shreya Ghosal</p>
-            </div>
-          </div>
         </div>
       </div>
       <div class="logo-name">
@@ -158,11 +135,19 @@
       <div class="song-container">
         <div class="first-row">
           <div class="image-and-title">
-            <img class="songs-images" src="./assets/central-cee-pic.jpg" alt="" />
+            <img
+              class="songs-images"
+              src="./assets/central-cee-pic.jpg"
+              alt=""
+            />
             <p class="songs-titles">Obsessed</p>
           </div>
           <div class="image-and-title">
-            <img class="songs-images" src="./assets/juice-world-pic.jpg" alt="" />
+            <img
+              class="songs-images"
+              src="./assets/juice-world-pic.jpg"
+              alt=""
+            />
             <p class="songs-titles">Juice world</p>
           </div>
           <div class="image-and-title">
@@ -172,17 +157,47 @@
         </div>
         <div class="second-row">
           <div class="image-and-title">
-            <img class="songs-images" src="./assets/departure-lane-pic.jpg" alt="" />
+            <img
+              class="songs-images"
+              src="./assets/departure-lane-pic.jpg"
+              alt=""
+            />
             <p class="songs-titles">Departure lane</p>
           </div>
           <div class="image-and-title">
-            <img class="songs-images" src="./assets/central-cee-pic.jpg" alt="" />
-            <p class="songs-titles">Obsessed </p>
+            <img class="songs-images" src="./assets/sunflower-pic.jpg" alt="" />
+            <p class="songs-titles">sunflower</p>
           </div>
           <div class="image-and-title">
-            <img class="songs-images" src="./assets/central-cee-pic.jpg" alt="" />
-            <p class="songs-titles">Obsessed</p>
+            <img
+              class="songs-images"
+              src="./assets/finding-her-pic.jpg"
+              alt=""
+            />
+            <p class="songs-titles">Finding her</p>
           </div>
+        </div>
+      </div>
+      <div class="bottom-wrapper">
+        <div class="bottom">
+          <i class="bx bxs-home"></i>
+          <p class="bottom-text">Home</p>
+        </div>
+        <div class="bottom">
+          <i class="bx bxl-play-store"></i>
+          <p class="bottom-text">Samples</p>
+        </div>
+        <div class="bottom">
+          <i class="fa-regular fa-compass"></i>
+          <p class="bottom-text">Explorer</p>
+        </div>
+        <div class="bottom">
+          <i class="bx bx-music"></i>
+          <p class="bottom-text">Library</p>
+        </div>
+        <div class="bottom">
+          <i class="bx bx-play-circle"></i>
+          <p class="bottom-text">Upgrade</p>
         </div>
       </div>
     </div>
